# openbb-financialdatasets-backend

./: .env  README.md  apps.json  main.py  pyproject.toml  widgets.json
src/: Dockerfile  __init__.py  apps.json  fly.toml  main.py  requirements.txt
